<resources>
    <string name="app_name">TourIstanbul</string>
    <string name="title_map">Map</string>
    <string name="title_attractions">Attractions</string>
    <string name="title_tools">Tools</string>
    <string name="title_information">Information</string>
    <string name="title_achievements">Achievements</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="important_numbers1">Medical emergency / Ambulance</string>
    <string name="important_numbers_ambulance">112</string>
    <string name="important_numbers2">Fire Services</string>
    <string name="important_numbers_fire">110</string>
    <string name="important_numbers3">Police Department</string>
    <string name="important_numbers_police">155</string>
    <string name="important_numbers4">Coastguard</string>
    <string name="important_numbers_coastguard">158</string>
    <string name="important_numbers5">Wildland Fire Service </string>
    <string name="important_numbers_forest">177</string>
    <string name="important_numbers6">Missing child / Women\'s helpline	Tel. </string>
    <string name="important_numbers_missing">183</string>
    <string name="important_numbers7">Chilean consulate</string>
    <string name="important_numbers_chilean_consulate">2122725790</string>
    <string name="important_numbers8">Portuguese consulate</string>
    <string name="important_numbers_portuguese_consulate">2122519118</string>
    <string name="important_numbers9">Brazilian consulate</string>
    <string name="important_numbers_brazilian_consulate">2122514735</string>
    <string name="important_numbers10">Colombian consulate</string>
    <string name="important_numbers_colombian_consulate">2122910861</string>
    <string name="important_numbers11">Costa Rican consulate</string>
    <string name="important_numbers_costa_rican_consulate">2125286819</string>
    <string name="important_numbers12">Dominican consulate</string>
    <string name="important_numbers_dominican">2122483613</string>
    <string name="important_numbers13">Ecuadorian consulate</string>
    <string name="important_numbers_ecuadorian">2123655202</string>
    <string name="important_numbers14">Salvadorean consulate</string>
    <string name="important_numbers_salvadorean">2125674760</string>
    <string name="important_numbers15">Spanish consulate</string>
    <string name="important_numbers_spanish_consulate">2122707410</string>
    <string name="btn_logout_from_google">Log out from Google+</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_email">User Email</string>
    <string name="user_name">User Name</string>
    <string name="title_preferences">Preferences</string>
    <string name="interest_title">INTERESTS</string>
    <string name="parents_summary">Places to go with the whole family</string>
    <string name="backpackers_summary">Travelling light? Check this box!</string>
    <string name="business_travelers_summary">Important places for business travelers</string>
    <string name="attractions_title">ATTRACTIONS</string>
    <string name="museums_summary">Museums</string>
    <string name="monuments_summary">Monuments</string>
    <string name="mosques_summary">Mosques</string>
    <string name="restaurants_summary">Show the best restaurants of Istanbul</string>
    <string name="malls_summary">Know where to shop!</string>
    <string name="hospitals_summary">Hospitals, best not to need them…</string>
    <string name="airports_summary">Airports</string>
    <string name="hotels_summary">Know where to spend the night</string>
    <string name="wifi_spots_summary">Wifi Spots</string>
    <string name="share_location_title">LOCATION</string>
    <string name="share_location_summary">Let other people see your location</string>
    <string name="sync_app">SYNC</string>
    <string name="sync_app_title">Synchronize data</string>
    <string name="sync_app_summary">Clear databases and sync with the server</string>
    <string name="settings_updated">Settings updated successfully.</string>
    <string name="settings_updated_error">Error while updating your settings. Please, try again later.</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</string>
    <string name="open_time"></string>
    <string name="open_time_tittle">Opening time</string>
    <string name="rate">Rating by the users</string>
    <string name="rate_button">Rate this place</string>
    <string name="description_listen_button">Listen to the description</string>
    <string name="openingTimes">Opening Times</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="translator">Translator</string>
    <string name="phrasebook">Phrasebook</string>
    <string name="transports">Transportation Info</string>
    <string name="turkey_lira">TRY-Turkey Lira</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="converter">Converter</string>
    <string name="change_currency">Switch From To</string>
    <string name="currencyExchange">Your currency exchange equivalent to</string>
    <string name="bus">Bus</string>
    <string name="tram">Tram</string>
    <string name="ferry">Ferry</string>
    <string name="turkish">Turkish</string>
    <string name="translate">Translate</string>
    <string name="change_language">Switch Languages</string>
    <string name="type_your_text_here">Type your text here</string>
    <string-array name="supported_languages">
        <item>English</item>
    
    
    
    
    
    
    
    
    </string-array>
    <string name="phrasebook_empty">&lt;br/></string>
    <string name="phrasebook1_basic_greetings">Basic Greetings</string>
    <string name="phrasebook1_basic_greetings_child1_en">&lt;b>EN &lt;/b>Hi!</string>
    <string name="phrasebook1_basic_greetings_child1_tr">&lt;b>TR &lt;/b>&lt;i>Merhaba!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child2_en">&lt;b>EN &lt;/b>Good morning!</string>
    <string name="phrasebook1_basic_greetings_child2_tr">&lt;b>TR &lt;/b>&lt;i>Günaydın!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child3_en">&lt;b>EN &lt;/b>Good evening!</string>
    <string name="phrasebook1_basic_greetings_child3_tr">&lt;b>TR &lt;/b>&lt;i>İyi akşamlar!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child4_en">&lt;b>EN &lt;/b>Welcome! / (to greet someone)</string>
    <string name="phrasebook1_basic_greetings_child4_tr">&lt;b>TR &lt;/b>&lt;i>Hoş geldiniz! / (hoş bulduk!)&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child5_en">&lt;b>EN &lt;/b>How are you?</string>
    <string name="phrasebook1_basic_greetings_child5_tr">&lt;b>TR &lt;/b>&lt;i>Nasılsın(ız)?&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child6_en">&lt;b>EN &lt;/b>I\'m fine, thanks!</string>
    <string name="phrasebook1_basic_greetings_child6_tr">&lt;b>TR &lt;/b>&lt;i>İyiyim, teşekkür ederim!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child7_en">&lt;b>EN &lt;/b>And you?</string>
    <string name="phrasebook1_basic_greetings_child7_tr">&lt;b>TR &lt;/b>&lt;i>Ya siz?&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child8_en">&lt;b>EN &lt;/b>Good / So-So</string>
    <string name="phrasebook1_basic_greetings_child8_tr">&lt;b>TR &lt;/b>&lt;i>İyi / Şöyle böyle&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child9_en">&lt;b>EN &lt;/b>Thank you (very much)!</string>
    <string name="phrasebook1_basic_greetings_child9_tr">&lt;b>TR &lt;/b>&lt;i>(Çok) teşekkür ederim!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child10_en">&lt;b>EN &lt;/b>You\'re welcome! (for "thank you")</string>
    <string name="phrasebook1_basic_greetings_child10_tr">&lt;b>TR &lt;/b>&lt;i>Rica ederim!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child11_en">&lt;b>EN &lt;/b>Hey! Friend!</string>
    <string name="phrasebook1_basic_greetings_child11_tr">&lt;b>TR &lt;/b>&lt;i>Hey! Arkadaş!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child12_en">&lt;b>EN &lt;/b>I missed you so much!</string>
    <string name="phrasebook1_basic_greetings_child12_tr">&lt;b>TR &lt;/b>&lt;i>Seni (sizi) çok özledim!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child13_en">&lt;b>EN &lt;/b>What\'s new?</string>
    <string name="phrasebook1_basic_greetings_child13_tr">&lt;b>TR &lt;/b>&lt;i>Ne var ne yok?&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child14_en">&lt;b>EN &lt;/b>Nothing much</string>
    <string name="phrasebook1_basic_greetings_child14_tr">&lt;b>TR &lt;/b>&lt;i>Özel bir şey yok!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child15_en">&lt;b>EN &lt;/b>Good night!</string>
    <string name="phrasebook1_basic_greetings_child15_tr">&lt;b>TR &lt;/b>&lt;i>İyi geceler!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child16_en">&lt;b>EN &lt;/b>See you later!</string>
    <string name="phrasebook1_basic_greetings_child16_tr">&lt;b>TR &lt;/b>&lt;i>Görüşürüz!&lt;/i></string>
    <string name="phrasebook1_basic_greetings_child17_en">&lt;b>EN &lt;/b>Good bye!</string>
    <string name="phrasebook1_basic_greetings_child17_tr">&lt;b>TR &lt;/b>&lt;i>Hoşça kal(ın)!&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions">Asking for Help and Directions</string>
    <string name="phrasebook2_asking_for_help_and_directions_child1_en">&lt;b>EN &lt;/b>I\'m lost</string>
    <string name="phrasebook2_asking_for_help_and_directions_child1_tr">&lt;b>TR &lt;/b>&lt;i>Kayboldum&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions_child2_en">&lt;b>EN &lt;/b>Could I help you?</string>
    <string name="phrasebook2_asking_for_help_and_directions_child2_tr">&lt;b>TR &lt;/b>&lt;i>Yardımcı olabilir miyim?&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions_child3_en">&lt;b>EN &lt;/b>Could you help me?</string>
    <string name="phrasebook2_asking_for_help_and_directions_child3_tr">&lt;b>TR &lt;/b>&lt;i>Bana yardım edebilir misiniz?&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions_child4_en">&lt;b>EN &lt;/b>Where is the (bathroom / pharmacy)?</string>
    <string name="phrasebook2_asking_for_help_and_directions_child4_tr">&lt;b>TR &lt;/b>&lt;i>Tuvalet / eczane nerede?&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions_child5_en">&lt;b>EN &lt;/b>Go straight! then turn left / right!</string>
    <string name="phrasebook2_asking_for_help_and_directions_child5_tr">&lt;b>TR &lt;/b>&lt;i>Doğru git (gidin), sonra sola / sağa dön (dönün)&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions_child6_en">&lt;b>EN &lt;/b>I\'m looking for John</string>
    <string name="phrasebook2_asking_for_help_and_directions_child6_tr">&lt;b>TR &lt;/b>&lt;i>John\'u arıyorum&lt;/i></string>
    <string name="phrasebook2_asking_for_help_and_directions_child7_en">&lt;b>EN &lt;/b>One moment please!</string>
    <string name="phrasebook2_asking_for_help_and_directions_child7_tr">&lt;b>TR &lt;/b>&lt;i>Bir dakika lütfen!&lt;/i></string>
    <string name="history">History of Istanbul</string>
    <string name="important_numbers">Important Phone Numbers</string>
    <string name="weather">Weather and Climate</string>
    <string name="dos_and_donts">Do\'s and Don\'ts</string>
    <string name="button_achievements">Achievements</string>
</resources>