<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="MEASURE UNITS">

        <ListPreference
            android:title="Distance Units"
            android:key="distance_units"
            android:summary="Select the distance unit"
            android:entries="@array/distance_units"
            android:entryValues="@array/distance_units_values"
            android:defaultValue="3" />

        <ListPreference
            android:title="Temperature Scale"
            android:key="temperature_scale"
            android:summary="Select the temperature scale"
            android:entries="@array/temperature_scale"
            android:entryValues="@array/temperature_scale_values"
            android:defaultValue="2" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/interest_title">

        <CheckBoxPreference
            android:key="Parents"
            android:title="Parents"
            android:summary="@string/parents_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="Backpackers"
            android:title="Backpackers"
            android:summary="@string/backpackers_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="Business Travelers"
            android:title="Business Travelers"
            android:summary="@string/business_travelers_summary"
            android:defaultValue="false" />
        
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/attractions_title">

        <CheckBoxPreference
            android:key="Airports"
            android:title="Airports"
            android:summary="@string/airports_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="Hospitals"
            android:title="Hospitals"
            android:summary="@string/hospitals_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="Hotels"
            android:title="Hotels"
            android:summary="@string/hotels_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="Malls"
            android:title="Malls"
            android:summary="@string/malls_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="Monuments"
            android:title="Monuments"
            android:summary="@string/monuments_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="Mosques"
            android:title="Mosques"
            android:summary="@string/mosques_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="Museums"
            android:title="Museums"
            android:summary="@string/museums_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="Restaurants"
            android:title="Restaurants"
            android:summary="@string/restaurants_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="Wifi_Spots"
            android:title="Wifi Spots"
            android:summary="@string/wifi_spots_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/share_location_title">

        <CheckBoxPreference
            android:key="share_location"
            android:title="Share your location"
            android:summary="@string/share_location_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/sync_app">

        <Preference android:title="@string/sync_app_title"
            android:summary="@string/sync_app_summary"
            android:key="sync_app" />

    </PreferenceCategory>

</PreferenceScreen>