<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imgProfilePic"
        android:layout_gravity="center"
        android:src="@drawable/default_avatar"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:paddingBottom="20dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:id="@+id/txtName"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@id/imgProfilePic"
        android:paddingBottom="20dp"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:id="@+id/txtEmail"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_below="@id/txtName"/>

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout_from_google"
        android:visibility="visible"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_achievements"
        android:id="@+id/btn_achievements"
        android:background="@drawable/ab_background"
        android:layout_above="@+id/btn_sign_out"
        android:layout_centerHorizontal="true" />

</RelativeLayout>