<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_currency_converter"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/tools_currency_selector"
                android:onClick="clicked"
                android:text="@string/currency_converter" />

            <Button
                android:id="@+id/button_transports"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/tools_transports_selector"
                android:onClick="clicked"
                android:text="@string/transports" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_translator"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/tools_translator_selector"
                android:onClick="clicked"
                android:text="@string/translator" />

            <Button
                android:id="@+id/button_phrasebook"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/tools_phrasebook_selector"
                android:onClick="clicked"
                android:text="@string/phrasebook" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>