<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_history"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/information_history_selector"
                android:onClick="clicked"
                android:text="@string/history" />

            <Button
                android:id="@+id/button_numbers"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/information_numbers_selector"
                android:onClick="clicked"
                android:text="@string/important_numbers" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_weather"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/information_weather_selector"
                android:onClick="clicked"
                android:text="@string/weather" />

            <Button
                android:id="@+id/button_dos_and_donts"
                style="@style/dashboard_button"
                android:drawableTop="@drawable/information_do_and_donts_selector"
                android:onClick="clicked"
                android:text="@string/dos_and_donts" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>