<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/tabLayoutFrom"
android:layout_width="match_parent"
android:layout_height="match_parent">

    <TextView
        android:id="@+id/to"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/to"
        android:textSize="20sp"
        android:textAlignment="gravity"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@+id/languageFrom"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/languageFrom"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:tag="0"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/to"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

   <TextView
       android:id="@+id/from"
       android:layout_width="150dp"
       android:layout_height="60dp"
       android:text="@string/from"
       android:textSize="20sp"
       android:textAlignment="center"
       android:layout_gravity="center"
       android:gravity="center"
       android:textStyle="bold"
       android:layout_alignTop="@+id/languageFrom"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/languageTo"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:tag="0"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_below="@+id/languageFrom"
        android:layout_toRightOf="@+id/to"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/entry"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/type_your_text_here"
        android:inputType="text"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_below="@+id/to"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/button_translate">

        <requestFocus />

    </EditText>

    <Button
        android:id="@+id/button_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:id="@+id/exit"
        android:inputType="text"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/button_translate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/button_translate"
        android:layout_alignEnd="@+id/button_translate" />

</RelativeLayout>
